# apertium-ron-cat

./: .gitattributes  .gitignore  .travis.yml  AUTHORS  Makefile.am  README  apertium-ron-cat.cat-ron.arx  apertium-ron-cat.cat-ron.crx  apertium-ron-cat.cat-ron.lrx  apertium-ron-cat.cat-ron.rtx  apertium-ron-cat.cat-ron.t1x  apertium-ron-cat.cat-ron.t2x  apertium-ron-cat.cat-ron.t3x  apertium-ron-cat.cat-ron.t4x  apertium-ron-cat.ron-cat.arx  apertium-ron-cat.ron-cat.crx  apertium-ron-cat.ron-cat.dix  apertium-ron-cat.ron-cat.lrx  apertium-ron-cat.ron-cat.t1x  apertium-ron-cat.ron-cat.t2x  configure.ac  configure~  modes.xml
.github/workflows/: bilingual.yml
dev/testvoc/: inconsistency-summary.sh  inconsistency.sh  poly.awk  testvoc-summary.cat-ron.txt  testvoc.sh  (+2 more)
test/: cat-ron-anaph-expected.txt  cat-ron-anaph-output.txt  cat-ron-biltrans-expected.txt  cat-ron-chunker-expected.txt  cat-ron-chunker2-output.txt  cat-ron-disamb-expected.txt  cat-ron-generator-output.txt  cat-ron-interchunk-output.txt  cat-ron-lex-output.txt  cat-ron-morph-output.txt  cat-ron-postchunk-expected.txt  cat-ron-postchunk-output.txt  cat-ron-postgen-expected.txt  cat-ron-postgen-gold.txt  cat-ron-postgen-output.txt  cat-ron-pretransfer-expected.txt  cat-ron-tagger-output.txt  cat-ron-transfer-output.txt  ron-cat-anaph-output.txt  ron-cat-generator-expected.txt  ron-cat-input.txt  ron-cat-interchunk-output.txt  ron-cat-morph-output.txt  ron-cat-morph2-expected.txt  ron-cat-postchunk-expected.txt  ron-cat-prefs-output.txt  ron-cat_iec2017-biltrans-expected.txt  ron-cat_iec2017-chunker-output.txt  ron-cat_iec2017-generator-output.txt  ron-cat_iec2017-morph2-output.txt  ron-cat_iec2017-postgen-output.txt  ron-cat_iec2017-pretransfer-expected.txt  ron-cat_iec2017-pretransfer-output.txt  ron-cat_pre2017-anaph-expected.txt  ron-cat_pre2017-biltrans-output.txt  ron-cat_pre2017-interchunk-expected.txt  ron-cat_pre2017-morph-expected.txt  ron-cat_pre2017-postchunk-output.txt  ron-cat_pre2017-postgen-gold.txt  tests.json
